Bug 1388005 - Fix build without Ion. r=nbp, a=lizzard